--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Multiverse by HTML5 UP
 	html5up.net | @n33co
@@ -8,6 +8,8 @@
 
 <head>
     <title>Calvin Chen</title>
+    <link rel="icon" href="link.png" sizes="16x16" type="image/png">
+
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -231,9 +233,9 @@
                         <p> Here is what it looks like in theory, of how a user would use this mobile application. </p>
                         <img src="calweb/foodie/wireframe.png" style="width: 80%;">
                         <p>
-                               
+
                         </p>
-                        </section>
+                    </section>
 
                     <section>
                         <h2>High Fidelity Prototype Mockups</h2>
@@ -242,8 +244,8 @@
                         <img src="calweb/foodie/hifi2.png" style="width:50%;">
 
                     </section>
-                    <!---<a href="   " target="_blank"><input type="submit" class="special" value="View Documentation" /></a>-->
-                    <iframe style="border: none;" width="450" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2Feusf8oefky3OVgO7ZkCnCXsX%2FUntitled%3Fnode-id%3D0%253A1" allowfullscreen></iframe>
+                    <a href="https://www.figma.com/file/eusf8oefky3OVgO7ZkCnCXsX/FinalFOODIE?node-id=0%3A1" target="_blank"><input type="submit" class="special" value="View Documentation" /></a>
+
 
                 </div>
             </div>
