--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
 
                     </section>
                     <br />
-                    <a href="https://www.figma.com/file/eusf8oefky3OVgO7ZkCnCXsX/FinalFOODIE?node-id=0%3A1" target="_blank"><input type="submit" class="special" value="View Documentation" /></a>
+                    <a href="https://www.figma.com/file/eusf8oefky3OVgO7ZkCnCXsX/FinalFOODIE?node-id=0%3A1" target="_blank"><input type="submit" class="special" value="View High Fidelity" /></a>
 
 
                 </div>
