Added Minor Changes

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <img src="calweb/library/central.png" alt="" />
                     <div id="overlay">
                         <h2>Seattle Public Library</h2>
-                        <p>Shelving Operations</p>
+                        <p>Planning and Operations</p>
                     </div>
                 </a>
                 <h2>Student Assistant</h2>
@@ -134,7 +134,8 @@
                             <li><a href="https://www.linkedin.com/in/calvin-chen-bbb496123/" class="icon fa-linkedin target=" _blank""><span class="label">LinkedIn</span></a></li>
                             <li><a href="https://github.com/chencal" class="icon fa-github target=" _blank""><span class="label">GitHub</span></a></li>
                         </ul>
-                       
+                        <a href="calweb/resume/resume.pdf" target="_blank"><input type="submit" class="special" value="View Resume" /></a>
+
                     </section>
                 </div>
             </div>
