--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
                 <section>
                     <h2>Assignment Aider</h2>
-                    <p>Students come to the University of Washington for a multitude of reason, whether it be to further their education, get a degree, or to figure out what they want to do for the rest of their lives. For many, reaching their goals include enrolling in difficult courses. 
+                    <p>Students come to the University of Washington for a multitude of reasons, whether it be to further their education, get a degree, or to figure out what they want to do for the rest of their lives. For many, reaching their goals include enrolling in difficult courses. 
                         Students that struggle or have questions with the content of said courses are only offered help through office hours, or CLUE sessions late at night. Here lies one problem with the current system, for some students, 
                         they are not able to attend said office hours or extra sessions for help.</p>
                     <p><strong>CREATED WITH: </strong>Adobe Illustrator, Adobe Photoshop</p>
@@ -415,6 +415,7 @@
                     this platform reduces the waste built on throwing away food for no good reason. </p>
                         <br>
                     </section>
+
                  <img src="calweb/cuisin/loader.png" style="width: 80%;">
                 </div>
             </div>
