Removed STA, added INFO 200

--- a/index.html
+++ b/index.html
@@ -101,13 +101,13 @@
 
             <article class="thumb">
                 <a href="#desc4" class="image">
-                    <img src="calweb/library/central.png" alt="" />
+                    <img src="calweb/library/fitbit.png" alt="" />
                     <div id="overlay">
-                        <h2>Seattle Public Library</h2>
-                        <p>Planning and Operations</p>
+                        <h2>Fitbit - Memory Integration</h2>
+                        <p>UX Design</p>
                     </div>
                 </a>
-                <h2>Student Assistant</h2>
+                <h2>Intellectual Foundations</h2>
 
             </article>
 
@@ -247,6 +247,9 @@
                     </section>
                     <br />
                     <a href="https://www.figma.com/file/eusf8oefky3OVgO7ZkCnCXsX/FinalFOODIE?node-id=0%3A1" target="_blank"><input type="submit" class="special" value="View High Fidelity" /></a>
+                    <br />
+                        <h2>View Presentation</h2>
+                    <a href="https://docs.google.com/presentation/d/1BpLgJdOX6-r3mlgBWn5UqA1qSGG09aLtKe4RIQdCeaM/edit?usp=sharing" target="_blank"><input type="submit" class="special" value="View Final Presentation" /></a>
 
 
                 </div>
@@ -421,25 +424,81 @@
             </div>
         </div>
 
+
       <div id="desc4" class="panel">
-            <div class="inner split">
-                <div class="col1">
+          <div class="inner split">
+              <div class="col1">
 
-                    <section>
-                        <h2>Student Assistant</h2>
-                        <p></p>
-                        <p><strong>WORK FROM: </strong> July 2016 - Present</p>
-                        <p><strong>ROLE: </strong>Sort, file and retrieve library materials and assisted with the organization of library materials. Provide services to patrons such as directory and technology assistance. Developed a working knowledge of the library including HORIZON program for SPL.</p>
-                        <p><strong>BRANCHES WORKED:  </strong>International District/Chinatown, Beacon Hill, New Holly, Rainier Beach</p>
+                  <section>
+                      <h2>Fitbit Integrated Memory Activitie</h2>
+                      <p></p>
+                      <p><strong>DESIGNED FOR:  </strong> INFO 200 - Intellectual Foundations FALL 2016</p>
+                      <p><strong>ROLE: </strong> UX DESIGNER</p>
+                      <p><strong>CREATED WITH: </strong>Invision</p>
 
-                        <br><br>
+                      <a href="https://invis.io/3FOMW4Z7CWV" target="_blank"><input type="submit" class="special" value="View Prototype"></a>
 
-                    </section>
-
-                </div>
+                  </section>
 
 
-            </div>
+
+
+              </div>
+              <div class="col2">
+                  <section>
+                      <h2> FitBit - Memory Integration</h2>
+
+                      <p>
+                          The most prevalent existing solution to treat Alzheimer’s are consumable drugs. These drugs include cholinesterase inhibitors and memantine to treat the cognitive aspect of the disease. Although these drugs slow the progression of Alzheimer's, there are side effects to taking it.
+                          Patients often experience nausea, vomiting, drowsiness, and other health deteriorating effects. For example, cholinesterase helps with a person's ability to think clearly, but at the same time, it can degrade their neurotransmitters. Although memantine helps with memory and learning,
+                          it also exposes cells to greater amounts of calcium, which can be damaging. Cholinesterase and memantine can be
+                          improved by eliminating most of the side effects but this is not possible because if the chemicals inducing the side effects were removed, the drug won’t subdue Alzheimer’s anymore. Additionally, treating other parts of the brain with cholinesterase inhibitors and memantine, and not solely
+                          the cognitive part, would be another possible improvement. This is where we introduce an applcation, integrated with the fitBit app that 'prevents' people from inhibiting symptoms that will soon lead to Alzheimer's.
+                      </p>
+                      <br />
+
+                      <h2>What group of people are you going to serve and what problem area are you going to investigate and address? </h2>
+                      <p> We are going to serve an aging generation of “Baby Boomers” by investigating how we can revolutionize treatment for Alzheimer’s disease through the use of information technology. In particular, we will be looking to help patients by preserving their memories (and therefore their relationships) that they have
+                       shared with people close to them, including their partners, friends, and family. This problem area should be addressed because living with a condition such as Alzheimer's severely impacts a person's functionality and their relationships with people that they truly care about.  Though from a conventional standpoint 
+                       there is a large amount of funding, the people afflicted by Alzheimer's are underserved from a technology standpoint. 
+                       Additionally, this creates a new profit opportunity for our group as this innovative product has the potential to become a very effective alternative to drugs. If we can integrate this product as a well established treatment, then we can fulfill an already established market need.
+
+                      <br />
+
+                      <h2>What existing solutions did you discover, what do they do well, and how can they be improved? </h2>
+                      <p> There has been developments of virtual reality environments for people with Alzheimer's, allowing them to interact with things that they often could not. For example, a virtual reality environment, created by Opaque Multimedia, has been used to deliver sensory therapy to patients with Alzheimer’s. Called “The Forest Project,” the application achieves this by creating a hyper realistic forest environment that patients can experience and enjoy. Elements such as sunlight, butterflies, snow, and flowers are some examples of what the virtual environment can offer to evoke a sensory and emotional response from patients. In order to become an effective form of treatment against Alzheimer’s, sensory therapy through virtual reality has to trigger other senses as well,
+                      such as the olfactory and tactile senses, while providing an even higher degree of realism.</p>
+
+                      <br />
+
+                      <h2> User Scenario</h2>
+                      <p> Hsu, a teacher with two children in his late thirties, wants to get back in shape. As he is beginning to age, he is becoming more mentally drained because of the amount of work that is put on him. He is forgetting to input students grades into the grade book and forgets to assign daily assignments. In his efforts to get back in shape, Denrick purchased a fitbit that can help him track his personal health, but he is not familiar with the current technology. Once he downloads the app, it will prompt him to customize his personal profile. It will ask for his weight, height, age, and gender to best personalize his account. 
+                            From here, the app gives a more in-depth tracking system that tracks your mental and physical state, how much water you have consumed, your weight, your meals, and your memory retention. 
+                            Once finished with the activities, the application automatically calculates the evaluation and thus directs Denrick to his individualized score. The data is then displayed on a graph, so it will be easier for him to view his progress. After the span of a couple of weeks and multiple daily evaluations, Denrick sees a dramatic decline in his memory. The application automatically pops up a message that says,
+                            "We have detected an unusual decline in your memory retention that requires attention. Please contact your medical provider to find out what steps to take next.” Denrick is prompted to see an actual doctor as the app detects that there is a potential he might have Alzheimer’s or a similar condition that affects his cognition. </p>
+
+                       <br />
+
+                      <p>Shaquita Liore, a receptionist at Allegren Pediatrics, is a fifty-year old obese woman who is divorced. She has a son, Jamie, who is nineteen and just starting college. She needs to pay for his tuition, but financial problems have been overwhelming. She has trouble processing the information told to her when she is inputting information
+                       about the patients into the computer. She will occasionally forget the name she just typed in. She recently visited the doctor for her yearly visit and due to her weight, inactive lifestyle, and overall stress, the doctor determined she was fairly susceptible to Alzheimer’s disease. So, the doctor prescribed a fitbit to Shaquita and it was
+                       paid for by her insurance. Shaquita has two goals: lose weight and increase her memory retention. After the memory activities have been finished, Shaquita is told that she is done for the day and the app synthesizes all of her data into graphs that display a trend. In a month, Shaquita and her doctor will be able to evaluate if her memory retention 
+                       is getting worse or better and detect early signs of Alzheimer’s before its onset.</p>
+
+                      <br />
+
+
+                  </section>
+
+
+
+                 <a href="https://www.figma.com/file/bkuT4iyti8i8FgHzftqAJ0Hd/PROTOTYPE-2.0?node-id=0%3A1" target="_blank"><input type="submit" class="special" value="View User Flow"></a>
+
+
+
+              </div>
+
+
+          </div>
         </div>
         
     <!-- Scripts -->
