--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                             <li><a href="https://www.linkedin.com/in/calvin-chen-bbb496123/" class="icon fa-linkedin target=" _blank""><span class="label">LinkedIn</span></a></li>
                             <li><a href="https://github.com/chencal" class="icon fa-github target=" _blank""><span class="label">GitHub</span></a></li>
                         </ul>
-                        <a href="calweb/resume/resume.pdf" target="_blank"><input type="submit" class="special" value="View Resume" /></a>
+                        <a href="https://drive.google.com/file/d/1SrNQOBtJIvj8IKPzGbwoQzmePD2q7avH/view?usp=sharing" target="_blank"><input type="submit" class="special" value="View Resume" /></a>
 
                     </section>
                 </div>
